--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid red;
+  /*  outline: 2px solid red; */
 }
 
 /* ----- h2 -----*/
