--- a/css/styles.css
+++ b/css/styles.css
@@ -89,11 +89,12 @@ img {
 .header-container {
   display: flex;
   align-items: center;
-  border: 1px solid var(--color-accent);
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .nav-container {
   display: flex;
+  align-items: center;
 }
 
 .header-logo {
@@ -164,12 +165,12 @@ img {
 
 /* ----- hero -----*/
 .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
   background: var(--color-hero-bc);
 }
 
 .hero-container {
-  padding-top: 188px;
-  padding-bottom: 188px;
 }
 
 .hero-title {
@@ -180,11 +181,13 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--color-white);
-  width: 496px;
+  max-width: 496px;
 }
 
 .hero-btn {
   display: block;
+  min-width: 169px;
+  height: 56px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 48px;
@@ -198,6 +201,8 @@ img {
   color: #ffffff;
   background-color: var(--color-primary-brand);
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -206,7 +211,7 @@ img {
 }
 
 /* ----- feature ----- */
-.feature-container {
+.feature {
   margin: 0 auto;
   padding-top: 120px;
   /*  outline: 2px solid green; */
@@ -219,11 +224,11 @@ img {
 }
 
 .feature-item {
-  width: 264px;
+  width: calc((100% - 72px) / 4);
 }
 
-.feature-item-text {
-  margin-top: 8px;
+.feature-item-title {
+  margin-bottom: 8px;
 }
 
 /* .feature-item-title {
@@ -243,56 +248,53 @@ img {
 
 /* ----- doing ----- */
 
-.doing-title {
-  text-align: center;
-}
-
-.doing-container {
-  width: 1128px;
-  margin: 0 auto;
+.doing {
   padding-top: 120px;
   padding-bottom: 120px;
-  /*  outline: 2px solid green; */
+}
+
+.doing-title {
+  text-align: center;
+  margin-bottom: 72px;
 }
 
 .doing-list {
-  margin-top: 72px;
   display: flex;
   justify-content: center;
   gap: 24px;
 }
 
-/* ----- team -----*/
-.team {
-  background-color: var(--color-light);
+.doing-item {
+  width: calc((100% - 48px) / 3);
 }
 
-.team-container {
+/* ----- team -----*/
+.team {
   padding: 120px 0px;
+  background-color: var(--color-light);
 }
 
 .team-title {
   text-align: center;
+  margin-bottom: 72px;
 }
 
 .team-list {
   display: flex;
   justify-content: center;
   gap: 24px;
-  margin-top: 72px;
 }
 
 .team-item {
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
 
 .team-item-desc {
-  margin: 32px 16px;
+  padding: 32px 16px;
   text-align: center;
-}
-
-.team-item-text {
-  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 /*.team-item-title {
@@ -312,15 +314,13 @@ img {
 /* ----- FOOTER -----*/
 .footer {
   background-color: var(--color-dark);
-}
-
-.footer-container {
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.footer-block {
-  width: 264px;
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo {
@@ -338,7 +338,7 @@ img {
 }
 
 .footer-text {
-  margin-top: 16px;
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -347,15 +347,15 @@ img {
 
 /* -----  portfolio link -----*/
 
-.portfolio-container {
-  padding-top: 96px;
-  padding-bottom: 120px;
+.portfolio {
+  padding: 96px 0 120px;
 }
 
 .portfolio-list {
   display: flex;
   justify-content: center;
   gap: 24px;
+  margin-bottom: 72px;
 }
 
 .portfolio-btn {
@@ -366,14 +366,17 @@ img {
   letter-spacing: 0.04em;
   background-color: var(--color-light);
   color: var(--color-primary-brand);
-  border: 0;
+  border: 1px solid var(--color-accent);
   cursor: pointer;
+  padding: 12px 24px;
+  border-radius: 4px;
 }
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
   background-color: var(--color-pressed-state);
   color: var(--color-white);
+  border: 1px solid transparent;
 }
 
 .job-list {
@@ -386,7 +389,6 @@ img {
 
 .job-item {
   width: 360px;
-  border: 1px solid var(--color-accent);
   margin-bottom: 48px;
 }
 
@@ -395,11 +397,9 @@ img {
 }
 
 .job-desc {
-  margin-top: 32px;
-  margin-bottom: 32px;
+  padding: 32px 16px;
   padding-left: 16px;
-}
-
-.job-text {
-  margin-top: 8px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
 }
